2013-05-26  Moritz Bunkus  <moritz@bunkus.org>

        * all: new feature: added a Portuguese translation of the programs
        by Ricardo Perdigão (see AUTHORS).

2013-04-28  Moritz Bunkus  <moritz@bunkus.org>

        * Released v6.2.0.

2013-04-27  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: The option "--engage
        remove_bitstream_ar_info" will now work on AVC/h.264 tracks read
        from Matroska/MP4 files as well. Fixes #868.

2013-04-16  Moritz Bunkus  <moritz@bunkus.org>

        * mmg: bug fix: mmg will now handle all file names given on the
        command line instead of only the first one. This allows things
        like opening several selected files with mmg in Windows, and mmg
        will add all of them. Fixes #867.

        * mkvmerge: bug fix: The amount of memory required to store the
        cues during muxing has been reduced drastically. This is more
        noticeable the more video and subtitle tracks are muxed. Fixes
        #871.

2013-04-15  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: If splitting had been active then the
        elements "cue duration" and "cue relative position" were only
        written to the first output file.

2013-04-14  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: The "CTS offset" field of FLV files with
        AVC/h.264 video tracks is now read as a signed-integer field in
        accordance with the FLV specifications.

2013-04-13  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: DTS parsing: no more warnings about
        incompatible encoder revision numbers will be printed. Fixes
        #866.

        * mkvextract: enhancement: track extraction mode: If mkvextract
        encounters a broken file structure it will output the last
        timecode successfully read before resyncing. After the resync the
        first cluster timecode will be reported as well.
