@@ -241,3 +241,4 @@ T_392avi_audio_chunk_size_0:fb73c5292f35250371b95877c7994103:passed:20130331-134
 T_393aac_audiospecificconfig_0channels:eb16e5c5bd832c969859116a5738967f:passed:20130413-214142:0.041190089
 T_394flv_negative_cts_offset:def6820e36a7b71524bc5a456e3c2215:passed:20130414-115331:0.123013461
 T_395remove_bitstream_ar_info:ec3cb098245f2b73bd908fab49fcc429-8ef61124e43d2230809af9de0e0db3ec-43ada798077dbf795001d193ade477d5-68e8d878b73698c256b664d6ab4bf485:passed:20130427-171243:0.334408574
+T_396X_pcm_mono_16bit:49b80add61d8a11514d747c9616f7e80:passed:20130624-200214:0.055106028
